Revision history for Hash-Restricted

{{$NEXT}}

0.0.8  2024-06-24T22:09:04+02:00
    - Remove module statement, it is not needed
    - Modernize test file extension
    - Modernize pod
    - Add sponsor link and button
    - Update copyright year

0.0.7  2021-09-10T11:05:20+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.6  2020-10-30T13:40:02+01:00
    - Simplify exporting of trait candidates
    - Add GitHub workflows testing
    - Update copyright year

0.0.5  2018-10-20T13:48:16+02:00
    - Account for STORE initialize -> INITIALIZE change

0.0.4  2018-08-13T15:46:20+01:00
    - Version bump for workshop demonstration

0.0.3  2018-07-25T11:21:09+02:00
    - .STORE must return self so it can be chained

0.0.2  2018-07-25T11:04:38+02:00
    - Fixed source-url in pod

0.0.1  2018-07-19T13:51:26+02:00
    - Initial version