@@ -17,7 +17,7 @@
   "resources": [
   ],
   "source-url": "https://github.com/lizmat/Hash-Restricted.git",
-  "tags": [
+  "tags": [ "HASH",
     "UTILS"
   ],
   "test-depends": [
