@@ -1,0 +1,53 @@
+=begin pod
+
+=head1 NAME
+
+Hash::Restricted - trait for restricting keys in hashes
+
+=head1 SYNOPSIS
+
+=begin code :lang<raku>
+
+use Hash::Restricted;
+
+my %h is restricted = a => 42, b => 666;
+%h<c> = 317;  # dies
+
+my %h is restricted<a b>;
+%h<a> = 42;
+%h<b> = 666;
+%h<c> = 317;  # dies
+
+=end code
+
+=head1 DESCRIPTION
+
+Hash::Restricted provides a C<is restricted> trait on C<Map>s and C<Hash>es
+as an easy way to restrict which keys are going to be allowed in the C<Map> /
+C<Hash>.
+
+If you do not specify any keys with C<is restricted>, it will limit to the
+keys that were specified when the C<Map> / C<Hash> was initialized.
+
+If you B<do> specify keys, then those will be the keys that will be allowed.
+
+=head1 AUTHOR
+
+Elizabeth Mattijsen <liz@raku.rocks>
+
+Source can be located at: https://github.com/lizmat/Hash-Restricted .
+Comments and Pull Requests are welcome.
+
+If you like this module, or what I’m doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2018, 2020, 2021, 2024, 2025 Elizabeth Mattijsen
+
+This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
+
+=end pod
+
+# vim: expandtab shiftwidth=4
