@@ -1,6 +1,8 @@
 Revision history for Hash-Restricted
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.0.8  2024-06-24T22:09:04+02:00
     - Remove module statement, it is not needed
